2008-04-26  Per Bothner  <per@bothner.com>

	* ModuleMethod.java (resolveParameterTypes): Don't NPE if name is null.

	* Compilation.java (loadClassRef(String)): Remove method.
	(loadClassRef(ObjectType)): Generalize from ClassType.

	* LitTable.java (emit): Handle a Class that isPrimitive.

	* Compilation.java (compileToArchive): Do compress .zip files.

2008-03-02  Per Bothner  <per@bothner.com>

	* ClassExp.java (compile): Rename to compileMembers.
	(compile): Update accordingly.
	* ObjectExp.java: Likewise.
	* ClassInitializer.java: Likewise.

2008-02-27  Per Bothner  <per@bothner.com>

	* ConsumerTarget.java (compileFromStack): Fix lookup of Consumer
	method, specifically when the operand is a char.
	Fixes bug reported by Yaroslav Kavenchuk <kavenchuk@gmail.com>.

2008-01-16  Per Bothner  <per@bothner.com>

	* CanInline.java (inline): Take extra argsInlined parameter.
	* ApplyExp.java (walkArgs): Take extra argsInlined parameter.
	* QuoteExp.java (inline): Pass argsInlined to CanInline.inline call.

2008-01-06  Per Bothner  <per@bothner.com>

	* QuoteExp.java (classObjectExp): New constant.
	(getInstance): Map Type.pointer_type to classObjectExp.
	* InlineCalls.java (walkLetExp): Must convert if decl type specified.

2007-12-30  Per Bothner  <per@bothner.com>

	* Compilation.java (cleanupAfterCompilation): New method.
	(outputClass): Call cleanupAfterCompilation.
	* ModuleExp.java (evalToClass): Likewise.
	This fixes a bad memory leak (noticable in RunXQTS).
	* ModuleInfo.java (getCompilation): Remove unused method.

2007-12-09  Per Bothner  <per@bothner.com>

	* LambdaExp.java (allocFieldFor): If we don't need a closure (and
	there is no explicit nameDecl.field), then allocate field in mainClass.
	Field no longer needs to be final.
	(addApplyMethods): Pass field in - if field is static, add apply
	methods in module instead of local frame.
	(compileSetField): Call allocFieldFor first, so we can pass it to
	addApplyMethod.